Fixed divider border between sidebar and main content not stretching vertically by applying the border to the aside element (which is stretched vertically) rather than the main element. TODO: use border-bottom instead on phones.

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -46,6 +46,8 @@ hr {
 }
 
 aside {
+  border-right: @border_color 1px solid;
+  
   div#user_meta {
     padding: 40px 20px 40px 20px;
     text-align: center;
@@ -250,7 +252,6 @@ main {
     top: 0;
     left: @side_size;
     margin: 0;
-    border-left: @border_color 1px solid;
     overflow-x: hidden;
     overflow-y: hidden;
 
